// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> can have a variant 1`] = `
<Notification
  copy="en"
  dismissible={false}
  variant="instructional"
>
  <Styled(Component)
    variant="instructional"
    vertical={3}
  >
    <Component
      className="sc-fPXMVe loNnDC"
      variant="instructional"
      vertical={3}
    >
      <Box
        className="sc-fPXMVe loNnDC"
        inline={false}
        tag="div"
        vertical={3}
      >
        <styled.div
          className="sc-fPXMVe loNnDC"
          inline={false}
          tag="div"
          vertical={3}
        >
          <div
            className="sc-dLMFU lhcihw sc-fPXMVe loNnDC sc-fPXMVe loNnDC"
          >
            <FlexGrid
              gutter={true}
              limitWidth={true}
              outsideGutter={true}
            >
              <styled.div
                limitWidth={true}
                outsideGutter={true}
                reverseLevel={
                  Array [
                    false,
                    false,
                    false,
                    false,
                    false,
                  ]
                }
              >
                <div
                  className="sc-jEACwC jUXPuX"
                >
                  <Row>
                    <styled.div
                      reverseLevel={
                        Array [
                          false,
                          false,
                          false,
                          false,
                          false,
                        ]
                      }
                    >
                      <div
                        className="sc-cwHptR gLqpmd"
                      >
                        <Col>
                          <styled.div
                            gutter={true}
                            hiddenLevel={
                              Array [
                                false,
                                false,
                                false,
                                false,
                                false,
                              ]
                            }
                            horizontalAlignLevel={
                              Array [
                                "inherit",
                                "inherit",
                                "inherit",
                                "inherit",
                                "inherit",
                              ]
                            }
                            xs={true}
                          >
                            <div
                              className="sc-jlZhew fwwBBF"
                            >
                              <FlexGrid
                                gutter={false}
                                limitWidth={true}
                                outsideGutter={true}
                              >
                                <styled.div
                                  limitWidth={true}
                                  outsideGutter={true}
                                  reverseLevel={
                                    Array [
                                      false,
                                      false,
                                      false,
                                      false,
                                      false,
                                    ]
                                  }
                                >
                                  <div
                                    className="sc-jEACwC jUXPuX"
                                  >
                                    <Row>
                                      <styled.div
                                        reverseLevel={
                                          Array [
                                            false,
                                            false,
                                            false,
                                            false,
                                            false,
                                          ]
                                        }
                                      >
                                        <div
                                          className="sc-cwHptR gLqpmd"
                                        >
                                          <Col>
                                            <styled.div
                                              gutter={false}
                                              hiddenLevel={
                                                Array [
                                                  false,
                                                  false,
                                                  false,
                                                  false,
                                                  false,
                                                ]
                                              }
                                              horizontalAlignLevel={
                                                Array [
                                                  "inherit",
                                                  "inherit",
                                                  "inherit",
                                                  "inherit",
                                                  "inherit",
                                                ]
                                              }
                                              xs={true}
                                            >
                                              <div
                                                className="sc-jlZhew fYJcTN"
                                              >
                                                <Box
                                                  between={3}
                                                  inline={true}
                                                  tag="div"
                                                >
                                                  <styled.div
                                                    between={3}
                                                    inline={true}
                                                    tag="div"
                                                  >
                                                    <div
                                                      className="sc-dLMFU iREnKw"
                                                    >
                                                      <Box
                                                        between={3}
                                                        inline={true}
                                                        style={
                                                          Object {
                                                            "justifyContent": "center",
                                                          }
                                                        }
                                                        tag="div"
                                                      >
                                                        <styled.div
                                                          between={3}
                                                          inline={true}
                                                          style={
                                                            Object {
                                                              "justifyContent": "center",
                                                            }
                                                          }
                                                          tag="div"
                                                        >
                                                          <div
                                                            className="sc-dLMFU iREnKw"
                                                            style={
                                                              Object {
                                                                "justifyContent": "center",
                                                              }
                                                            }
                                                          >
                                                            <Paragraph
                                                              align="left"
                                                              bold={false}
                                                              invert={false}
                                                              size="medium"
                                                            >
                                                              <styled.p
                                                                align="left"
                                                                bold={false}
                                                                invert={false}
                                                                size="medium"
                                                              >
                                                                <p
                                                                  className="sc-cPiKLX FMILr"
                                                                  size="medium"
                                                                >
                                                                  Some content
                                                                </p>
                                                              </styled.p>
                                                            </Paragraph>
                                                          </div>
                                                        </styled.div>
                                                      </Box>
                                                    </div>
                                                  </styled.div>
                                                </Box>
                                              </div>
                                            </styled.div>
                                          </Col>
                                        </div>
                                      </styled.div>
                                    </Row>
                                  </div>
                                </styled.div>
                              </FlexGrid>
                            </div>
                          </styled.div>
                        </Col>
                      </div>
                    </styled.div>
                  </Row>
                </div>
              </styled.div>
            </FlexGrid>
          </div>
        </styled.div>
      </Box>
    </Component>
  </Styled(Component)>
</Notification>
`;

exports[`<Notification /> can have a variant 2`] = `
<Notification
  copy="en"
  dismissible={false}
  variant="success"
>
  <Styled(Component)
    variant="success"
    vertical={3}
  >
    <Component
      className="sc-fPXMVe bgAopl"
      variant="success"
      vertical={3}
    >
      <Box
        className="sc-fPXMVe bgAopl"
        inline={false}
        tag="div"
        vertical={3}
      >
        <styled.div
          className="sc-fPXMVe bgAopl"
          inline={false}
          tag="div"
          vertical={3}
        >
          <div
            className="sc-dLMFU lhcihw sc-fPXMVe bgAopl sc-fPXMVe bgAopl"
          >
            <FlexGrid
              gutter={true}
              limitWidth={true}
              outsideGutter={true}
            >
              <styled.div
                limitWidth={true}
                outsideGutter={true}
                reverseLevel={
                  Array [
                    false,
                    false,
                    false,
                    false,
                    false,
                  ]
                }
              >
                <div
                  className="sc-jEACwC jUXPuX"
                >
                  <Row>
                    <styled.div
                      reverseLevel={
                        Array [
                          false,
                          false,
                          false,
                          false,
                          false,
                        ]
                      }
                    >
                      <div
                        className="sc-cwHptR gLqpmd"
                      >
                        <Col>
                          <styled.div
                            gutter={true}
                            hiddenLevel={
                              Array [
                                false,
                                false,
                                false,
                                false,
                                false,
                              ]
                            }
                            horizontalAlignLevel={
                              Array [
                                "inherit",
                                "inherit",
                                "inherit",
                                "inherit",
                                "inherit",
                              ]
                            }
                            xs={true}
                          >
                            <div
                              className="sc-jlZhew fwwBBF"
                            >
                              <FlexGrid
                                gutter={false}
                                limitWidth={true}
                                outsideGutter={true}
                              >
                                <styled.div
                                  limitWidth={true}
                                  outsideGutter={true}
                                  reverseLevel={
                                    Array [
                                      false,
                                      false,
                                      false,
                                      false,
                                      false,
                                    ]
                                  }
                                >
                                  <div
                                    className="sc-jEACwC jUXPuX"
                                  >
                                    <Row>
                                      <styled.div
                                        reverseLevel={
                                          Array [
                                            false,
                                            false,
                                            false,
                                            false,
                                            false,
                                          ]
                                        }
                                      >
                                        <div
                                          className="sc-cwHptR gLqpmd"
                                        >
                                          <Col>
                                            <styled.div
                                              gutter={false}
                                              hiddenLevel={
                                                Array [
                                                  false,
                                                  false,
                                                  false,
                                                  false,
                                                  false,
                                                ]
                                              }
                                              horizontalAlignLevel={
                                                Array [
                                                  "inherit",
                                                  "inherit",
                                                  "inherit",
                                                  "inherit",
                                                  "inherit",
                                                ]
                                              }
                                              xs={true}
                                            >
                                              <div
                                                className="sc-jlZhew fYJcTN"
                                              >
                                                <Box
                                                  between={3}
                                                  inline={true}
                                                  tag="div"
                                                >
                                                  <styled.div
                                                    between={3}
                                                    inline={true}
                                                    tag="div"
                                                  >
                                                    <div
                                                      className="sc-dLMFU iREnKw"
                                                    >
                                                      <Box
                                                        between={3}
                                                        inline={true}
                                                        style={
                                                          Object {
                                                            "justifyContent": "center",
                                                          }
                                                        }
                                                        tag="div"
                                                      >
                                                        <styled.div
                                                          between={3}
                                                          inline={true}
                                                          style={
                                                            Object {
                                                              "justifyContent": "center",
                                                            }
                                                          }
                                                          tag="div"
                                                        >
                                                          <div
                                                            className="sc-dLMFU iREnKw"
                                                            style={
                                                              Object {
                                                                "justifyContent": "center",
                                                              }
                                                            }
                                                          >
                                                            <Styled(Component)
                                                              vertical={1}
                                                            >
                                                              <Component
                                                                className="sc-gFqAkR jTZokd"
                                                                vertical={1}
                                                              >
                                                                <Box
                                                                  className="sc-gFqAkR jTZokd"
                                                                  inline={false}
                                                                  tag="div"
                                                                  vertical={1}
                                                                >
                                                                  <styled.div
                                                                    className="sc-gFqAkR jTZokd"
                                                                    inline={false}
                                                                    tag="div"
                                                                    vertical={1}
                                                                  >
                                                                    <div
                                                                      className="sc-dLMFU dqhjSI sc-gFqAkR jTZokd sc-gFqAkR jTZokd"
                                                                    >
                                                                      <NotificationSuccess
                                                                        copy="en"
                                                                      >
                                                                        <FeedbackIcon
                                                                          copy="en"
                                                                          copyDictionary={
                                                                            Object {
                                                                              "en": Object {
                                                                                "a11yText": "Success",
                                                                              },
                                                                              "fr": Object {
                                                                                "a11yText": "Réussite",
                                                                              },
                                                                            }
                                                                          }
                                                                          height={20}
                                                                          optionalText={false}
                                                                          viewBox="0 0 20 20"
                                                                          width={20}
                                                                        >
                                                                          <styled.svg
                                                                            height="1.25rem"
                                                                            role="img"
                                                                            viewBox="0 0 20 20"
                                                                            width="1.25rem"
                                                                          >
                                                                            <svg
                                                                              className="sc-aXZVg iHZZjH"
                                                                              height="1.25rem"
                                                                              role="img"
                                                                              viewBox="0 0 20 20"
                                                                              width="1.25rem"
                                                                            >
                                                                              <title>
                                                                                Success
                                                                              </title>
                                                                              <path
                                                                                d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm8.127 4.673a.633.633 0 0 0 .092-.105l7.734-8.572a.693.693 0 0 0-.009-.925.595.595 0 0 0-.882-.001l-7.514 8.055-2.612-2.8a.596.596 0 0 0-.88 0 .706.706 0 0 0-.014.928l3.038 3.51a.623.623 0 0 0 .486.219.587.587 0 0 0 .46-.2l.087-.097.014-.012z"
                                                                                fill="#2B8000"
                                                                                fillRule="evenodd"
                                                                              />
                                                                            </svg>
                                                                          </styled.svg>
                                                                        </FeedbackIcon>
                                                                      </NotificationSuccess>
                                                                    </div>
                                                                  </styled.div>
                                                                </Box>
                                                              </Component>
                                                            </Styled(Component)>
                                                            <Paragraph
                                                              align="left"
                                                              bold={false}
                                                              invert={false}
                                                              size="medium"
                                                            >
                                                              <styled.p
                                                                align="left"
                                                                bold={false}
                                                                invert={false}
                                                                size="medium"
                                                              >
                                                                <p
                                                                  className="sc-cPiKLX FMILr"
                                                                  size="medium"
                                                                >
                                                                  Some content
                                                                </p>
                                                              </styled.p>
                                                            </Paragraph>
                                                          </div>
                                                        </styled.div>
                                                      </Box>
                                                    </div>
                                                  </styled.div>
                                                </Box>
                                              </div>
                                            </styled.div>
                                          </Col>
                                        </div>
                                      </styled.div>
                                    </Row>
                                  </div>
                                </styled.div>
                              </FlexGrid>
                            </div>
                          </styled.div>
                        </Col>
                      </div>
                    </styled.div>
                  </Row>
                </div>
              </styled.div>
            </FlexGrid>
          </div>
        </styled.div>
      </Box>
    </Component>
  </Styled(Component)>
</Notification>
`;

exports[`<Notification /> renders 1`] = `
<div
  class="sc-dLMFU lhcihw sc-fPXMVe loNnDC sc-fPXMVe loNnDC"
>
  <div
    class="sc-jEACwC jUXPuX"
  >
    <div
      class="sc-cwHptR gLqpmd"
    >
      <div
        class="sc-jlZhew fwwBBF"
      >
        <div
          class="sc-jEACwC jUXPuX"
        >
          <div
            class="sc-cwHptR gLqpmd"
          >
            <div
              class="sc-jlZhew fYJcTN"
            >
              <div
                class="sc-dLMFU iREnKw"
              >
                <div
                  class="sc-dLMFU iREnKw"
                  style="justify-content:center"
                >
                  <p
                    class="sc-cPiKLX FMILr"
                  >
                    Some content
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
